[package]
name = "synapse-money-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jsonwebtoken = { version = "10", features = ["use_pem", "rust_crypto"] }
argon2 = { version = "0.5", features = ["std"] }

validator = { version = "0.19", features = ["derive"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"

utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[dev-dependencies]
mockall = "0.13"
testcontainers = "0.24"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "synapse-money-api"
path = "src/main.rs"